examples/negative/effects_phase2/exit_helper_no_row.kai
# Negative fixture (#537 / effects phase 2): bare prelude
# `exit(code)` raises `Process` on the caller's row per
# docs/effects-stdlib.md §`Process`. A helper that calls
# `exit` bare without declaring `/ Process` must be rejected
# by the typer; before #537 the bare call silently slipped
# through `prelude_effect_for` and the helper compiled with
# an empty row, leaving the process termination invisible to
# every caller.
#
# `main`'s REmpty row still absorbs `Process` (the standard
# main-absorbs-builtins discipline), so this fixture deliberately
# anchors the silent contract in a non-main helper where the
# enforcement actually bites.

fn die() : Nothing = exit(1)

fn main() : Int = {
  let _ = die()
  0
}
